# KungFu

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .travis.yml  BUG  CMakeLists.txt  CONTRIBUTING.md  INSTALL  README.md  avg-throughput.py  avg-throughput.sh  azure-pipelines.yml  build-imagenet-index.sh  build-squad-index.sh  build.sh  configure  go.mod  local-build.sh  m  nadeen_readme  q  remote-x.sh  remount-tf-records.sh  run-kungfu-platypus.sh  setup.py  setup_mindspore.py  setup_plain.py  setup_python.py  setup_pytorch.py  setup_tensorflow.py  upload.sh  x  x-ako-experiments.sh  x.py  x.sh
.github/: Dockerfile.base  Dockerfile.kungfu
.github/workflows/: build-image.sh  ci.yaml  cluster-test-1.sh  cluster-test-2.sh  cluster.yaml  compatiability.yaml  docker.yaml  ms-elastic.yml  pytorch.yaml  release.yaml
benchmarks/: adaptive_trainer.py  bench-adaptation.sh  tensorflow_synthetic_benchmark.py
benchmarks/adaptation/: Dockerfile  adaptive_trainer.py  bench-adaptation.sh  build-image.sh  gen-compose.py
benchmarks/adaptive/: .gitignore  Dockerfile  adaptive_trainer.py  bench-adaptation.sh  compose-run.sh  gen-compose.py
benchmarks/monitoring/: README.md  benchmark.py  run_benchmark.sh
benchmarks/performance/: README.md  benchmark_horovod.py  benchmark_horovod.sh  benchmark_kungfu.sh  benchmark_ps.py  benchmark_ps.sh  example_bench_ps.sh  hvd_tensorflow_synthetic_benchmark.py  kf_tensorflow_synthetic_benchmark.py  ps_benchmark.py  run_ps_benchmark.sh
benchmarks/scaling/: benchmark_kungfu_scaling.py  debug_hooks.py  generate-schedule.py
benchmarks/synchronisation/: benchmark_kungfu.py
benchmarks/system/: README.md  benchmark_horovod.py  benchmark_horovod_torch.py  benchmark_kungfu.py  benchmark_kungfu_elastic.py  benchmark_kungfu_tf2.py  benchmark_kungfu_torch.py  benchmark_ps.py
cmake/: Findstdtracer.cmake  cgo.cmake  fpga.cmake  go.cmake  nccl.cmake  rpath.cmake  tests.cmake  tf-op.cmake
cmake/Modules/: Findnop.cmake
debug/add_worker/: add_worker.go
debug/kungfu-init/: kungfu-init.go
debug/remove_worker/: remove_worker.go
docker/: Dockerfile  Dockerfile.builder-ubuntu18  Dockerfile.example-ubuntu18  Dockerfile.huawei  Dockerfile.huawei-builder  Dockerfile.huawei-runtime  Dockerfile.kungfu-tools  Dockerfile.tf-cpu  Dockerfile.tf-cpu-ubuntu18  Dockerfile.tf-gpu  Dockerfile.ubuntu18  build-images.sh  sources.list.aliyun  sources.list.azure  sources.list.disco-aliyun  sources.list.xenial-aliyun  update-builder-image.sh  upload-image.sh
docker/modelarts/: Dockerfile.ubuntu1604-horovod  Dockerfile.ubuntu1604-kungfu  Dockerfile.ubuntu1604-kungfu-base  Dockerfile.ubuntu1604-kungfu-nccl
docker/moxing/: Dockerfile.moxing-ubuntu16
docs/: .gitignore  Makefile  api.rst  conf.py  extract-go-doc.sh  extract.go  gen-doc.py  index.rst  monitor_proposal.md  requirements.extra.txt  requirements.txt  serve.go
examples/: LeNet.py  Notes  common.py  dataset.py  dynamic_train_cifar.py  dynamic_train_cifar.sh  dynamic_train_cifar10.py  dynamic_train_cifar10.sh  dynamic_train_mnist.py  dynamic_train_mnist.sh  gns_optimizer.py  hvd_keras_imagenet_resnet50_tfrecord.py  keras_mnist.py  keras_resnet.py  kungfu-train.py  lenet.py  logistic_regression.py  logistic_regression_mnist.py  mnist_keras.py  mnist_mlp.py  mnist_mlp_monitoring.py  mnist_slp.py  parse_data_for_benchmark.py  parse_imagenet_test_data.py  prepro.py  session.py  tensorflow_synthetic_benchmark.py  tf1_mnist_elastic_sgd.py  tf1_mnist_elastic_training.py  tf1_mnist_estimator.py  tf1_mnist_keras.py  tf1_mnist_session.py  tf1_training_monitoring.py  tf2_keras_mnist.py  tf2_mnist_gradient_tape.py  tf2_mnist_keras.py  tf2_mnist_keras_dataset.py  tf2_mnist_keras_v1.py  tf2_mnist_keras_v2.py  torch_mnist_example.py  (+1 more)
examples/Failure_recovery_examples/: eager.py  tf1_mnist_session.py  tf2_mnist_keras.py
examples/atari_pingpong/: cnn_agent.py  pingpong.py
examples/elastic/: README.md  config_server_init.json  elastic_estimator.py  mnist_slp_estimator.py  run_elastic.sh
examples/experiments/: README  four-machines-4-gpu-each-128  four-machines-4-gpu-each-32  graphdata_throughput.txt  hitogram.py  plot.py  plot_accuracy.py  test_acc.txt  time_to_acc.txt  train_time.txt  val_acc.txt
examples/gradient_noise/: plot_noise.py
examples/mnist_elastic_docker/: README.md
examples/mnist_elastic_eager/: README.md  main.py  run.sh
examples/mnist_elastic_policy/: elastic_policy.py  main.py  run.sh
examples/multiprocess/: tf_multiproces.py  tf_multiprocess.py  torch_multiprocess.py
examples/torch_elastic/: run.sh  torch_mnist_example.py
experimental/: estimator_elastic.py  init_from_json.py
experimental/adapt_strategy/: adapt_strategy.py  adapt_strategy_dev.py
experimental/atari_pingpong/: base_agent.py  cnn_agent.py  diff_trainer.py  mlp_agent.py  pingpong.py  requirements.txt  run.sh
experimental/gradient_noise/: plot_noise.py  prepro.py
experimental/init_from_json/: main.py  run.sh
experimental/net-monitoring/: NetMonitoringHook.py
experimental/net_monitoring/: CustomAdaSGD.py  NetMonHook.py  custom_ada_sgd.py
experimental/queue/: queue_example.py  run.sh
experimental/rl-example/: rl_agent.py  rl_run.sh  rlzoo.py  run.sh
experiments/elastic/: elastic.go
experiments/horovod/: hvd_tensorflow_synthetic_benchmark.py
experiments/kungfu/: kf_tensorflow_imagenet_benchmark.py  kf_tensorflow_synthetic_benchmark.py
experiments/parameter-server/: ps.py  (+1 more)
huawei/: Dockerfile
include/: algo.h  kungfu.h
kungfu/: __init__.py  negotiator.py
osdi20/: README.md
scripts/: clang-tidy.sh  clean-code.sh  download-cifar.sh  download-mnist.sh  go-install.sh  go-test.sh  install-gperftools.sh  install-gtest.sh  install-nccl.sh  install-python3.sh  install.sh  launcher.sh  list-deps.sh  pack.sh  parallel-train.sh  run-experiments.sh  run-integration-tests.sh  show-go-deps.sh  show_tensorflow_info.py
src/: communicator.cpp  communicator.h  logger.h  message.cpp  message.h  negotiator.cpp  negotiator.h
tests/: requirements.lint.txt  requirements.txt
(+1011 files in other folders)
